--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
-body {
+* {
     font-family: monospace;
+}
+body {
     overflow: hidden;
     margin: 0;
     padding: 0;
@@ -10,4 +12,21 @@ body {
 }
 .frame {
     font-size: 28px;
+}
+.h1 {
+    font-size: 22px;
+}
+.h2 {
+    font-size: 12px;
+}
+a {
+    color: dodgerblue;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+.arroba {
+    font-family: arial, sans-serif;
+    font-size: 26px;
 }
