--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
+@font-face {
+    font-family: defaultFont;
+    src: url(../Cousine-Regular.woff);
+}
 * {
-    font-family: monospace;
+    font-family: defaultFont;
 }
 body {
     overflow: hidden;
