--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,9 @@ a:hover {
     line-height: 23px;
     margin-top: 5px;
 }
+.job > div:nth-child(2) div:not('.company') {
+    font-size: 12px;
+}
 .job img {
     width: 100%;
 }
@@ -77,4 +80,18 @@ a:hover {
 }
 .idiom {
     margin-top: 30px;
+}
+.description {
+    font-size: 12px;
+    line-height: 14px;
+}
+.job.project {
+    width: 280px;
+}
+.job.project > div:nth-child(2) {
+    width: 190px;
+
+}
+.job.project > div:nth-child(3).description.more {
+    width: 277px;
 }
