--- a/css/main.css
+++ b/css/main.css
@@ -106,12 +106,15 @@ a:hover {
     margin-top: 18px;
 }
 .courses > a {
-    display: block;
+    display: inline-block;
     font-size: 12px;
     margin-top: 14px;
     line-height: 14px;
     color: #333;
     text-decoration: none;
+}
+.courses > a:first-child {
+    margin-top: 0;
 }
 .courses > a:hover {
     color: #000;
